--- a/app/src/main/res/layout/fragment_add_patient.xml
+++ b/app/src/main/res/layout/fragment_add_patient.xml
@@ -18,8 +18,8 @@
         android:textColor="#0E0E0F"
         android:textColorLink="#000000"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="49dp"
-        tools:layout_editor_absoluteY="35dp" />
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="29dp" />
 
     <EditText
         android:id="@+id/txtAddmissionDate"
@@ -32,9 +32,11 @@
         android:textColor="#343434"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.924"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.531"
-        tools:layout_editor_absoluteX="182dp" />
+        app:layout_constraintVertical_bias="0.534" />
 
     <EditText
         android:id="@+id/txtName"
@@ -48,15 +50,15 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
+        app:layout_constraintHorizontal_bias="0.129"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.142" />
+        app:layout_constraintVertical_bias="0.119" />
 
     <EditText
         android:id="@+id/txtLastName"
-        android:layout_width="198dp"
-        android:layout_height="48dp"
+        android:layout_width="199dp"
+        android:layout_height="49dp"
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:hint="Apellidos"
@@ -82,7 +84,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.615" />
@@ -99,7 +101,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintHorizontal_bias="0.154"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.439" />
@@ -132,10 +134,10 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.882"
+        app:layout_constraintHorizontal_bias="0.114"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.721" />
+        app:layout_constraintVertical_bias="0.754" />
 
     <EditText
         android:id="@+id/txtAge"
@@ -148,10 +150,10 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.91"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.721" />
+        app:layout_constraintVertical_bias="0.732" />
 
     <EditText
         android:id="@+id/txtBedNumber"
@@ -164,7 +166,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.279" />
